Added possible solution to CORS

--- a/api-gateway-dev.yaml
+++ b/api-gateway-dev.yaml
@@ -3,6 +3,12 @@ spring:
     name: API-GATEWAY
   cloud:
     gateway:
+      globalcors:
+        corsConfigurations:
+          '[/**]':
+          allowedOrigins: "*"
+          allowedMethods: "*"
+          allowedHeaders: "*"
       discovery:
         locator:
           enabled: true
