--- a/api-gateway-dev.yaml
+++ b/api-gateway-dev.yaml
@@ -6,9 +6,13 @@ spring:
       globalcors:
         corsConfigurations:
           '[/**]':
-          allowedOrigins: "*"
-          allowedMethods: "*"
+          allowedOrigins: "http://localhost:8000"
           allowedHeaders: "*"
+          allowedMethods: "*"
+          - GET
+          - POST
+          - PUT
+          - DELETE
       discovery:
         locator:
           enabled: true
