--- a/api-gateway-dev.yaml
+++ b/api-gateway-dev.yaml
@@ -5,14 +5,7 @@ spring:
     gateway:
       globalcors:
         corsConfigurations:
-          '[/**]':
-          allowedOrigins: "http://localhost:8000"
-          allowedHeaders: "*"
-          allowedMethods: "*"
-          - GET
-          - POST
-          - PUT
-          - DELETE
+          add-to-simple-url-handler-mapping: true
       discovery:
         locator:
           enabled: true
