--- a/api-gateway-dev.yaml
+++ b/api-gateway-dev.yaml
@@ -4,8 +4,15 @@ spring:
   cloud:
     gateway:
       globalcors:
-        corsConfigurations:
-          add-to-simple-url-handler-mapping: true
+        cors-configurations:
+          '[/**]'
+            allowedOrigns: "http://localhost:8080"
+            allowedMethods:
+              - GET
+              - POST
+            allowedHeaders:
+              - Content-Type
+        add-to-simple-url-handler-mapping: true
       discovery:
         locator:
           enabled: true
