--- a/api-gateway-dev.yaml
+++ b/api-gateway-dev.yaml
@@ -6,6 +6,8 @@ spring:
       discovery:
         locator:
           enabled: true
+      default-filters:
+        - name: TokenFilter 
       routes:
         - id: USER-COURSES
           uri: lb://USER-COURSES
