--- a/api-gateway-dev.yaml
+++ b/api-gateway-dev.yaml
@@ -3,6 +3,15 @@ spring:
     name: API-GATEWAY
   cloud:
     gateway:
+      globalcors:
+        corsConfigurations:
+          '[/**]':
+            allowedOrigins: "http://localhost:3000"
+            allowedMethods:
+            - GET
+            - POST
+            - PUT
+            - DELETE
       default-filters:
         - name: TokenFilter 
       routes:
